- improved internal handling of RainerScript functions, building the
  necessary plumbing to support more functions with decent runtime
  performance. This is also necessary towards the long-term goal
  of loadable library modules.
- added new RainerScript function "tolower"
- improved testbench
  * added tests for tcp-based reception
  * added tcp-load test (1000 connections, 20,000 messages)
- bugfix: solved potential memory leak in msg processing, could manifest
  itself in imtcp
---------------------------------------------------------------------------
Version 4.1.7  [BETA] (rgerhards), 2009-04-??
- bugfix: $InputTCPMaxSessions config directive was accepted, but not
  honored. This resulted in a fixed upper limit of 200 connections.
---------------------------------------------------------------------------
Version 4.1.6  [DEVEL] (rgerhards), 2009-04-07
- added new "csv" property replacer options to enable simple creation
  of CSV-formatted outputs (format from RFC4180 is used)
- implemented function support in RainerScript. That means the engine
  parses and compile functions, as well as executes a few build-in
  ones. Dynamic loading and registration of functions is not yet
  supported - but we now have a good foundation to do that later on.
- implemented the strlen() RainerScript function
- added a template output module
- added -T rsyslogd command line option, enables to specify a directory
  where to chroot() into on startup. This is NOT a security feature but
  introduced to support testing. Thus, -T does not make sure chroot()
  is used in a secure way. (may be removed later)
- added omstdout module for testing purposes. Spits out all messages to
  stdout - no config option, no other features
- added a parser testing suite (still needs to be extended, but a good
  start)
- modified $ModLoad statement so that for modules whom's name starts with
  a dot, no path is prepended (this enables relative-pathes and should
  not break any valid current config)